2009-11-02  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2876406:
    * source/org/jfree/data/time/TimeTableXYDataset.java
    (add): Changed String parameter to Comparable,
    (remove): Likewise.

2009-09-28  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2868608 by Peter Becker:
    * source/org/jfree/chart/renderer/BoxAndWhiskerRenderer.java
    (whiskerWidth): New field,
    (BoxAndWhiskerRenderer): Set new field default,
    (getWhiskerWidth): New method,
    (setWhiskerWidth): Likewise,
    (drawHorizontalItem): Use new field,
    (drawVerticalItem): Likewise,
    (equals): Check new flag.

2009-09-28  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2868585 by Peter Becker:
    * source/org/jfree/chart/renderer/BoxAndWhiskerRenderer.java
    (useOutlinePaintForWhiskers): New field,
    (getUseOutlinePaintForWhiskers): New method,
    (setUseOutlinePaintForWhiskers): Likewise,
    (drawHorizontalItem): Use new flag,
    (drawVerticalItem): Likewise,
    (equals): Check new flag.

2009-09-28  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2868557:
    * source/org/jfree/chart/renderer/BoxAndWhiskerRenderer.java
    (setMedianVisible): Fire change event.

2009-09-16  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2849731:
    * source/org/jfree/chart/DatasetUtilities.java
    (iterateRangeBounds(XYDataset, boolean)): For IntervalXYDataset, include
    regular value and account for nulls / Double.NaN.

2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2849731:
    * source/org/jfree/chart/DatasetUtilities.java
    (iterateRangeBounds(CategoryDataset, boolean)): For IntervalCategoryDataset
    look at regular value, and account for nulls.

2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug fix by Jim Goodwin:
    * source/org/jfree/chart/MouseWheelHandler.java
    (handleZoomable): Respect domain/rangeZoomable fields in ChartPanel.
