@@ -1,3 +1,10 @@
+2009-11-03  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/AbstractCategoryItemRenderer.java
+    (getLegendItems): Check series rendering order in plot,
+    * source/org/jfree/chart/plot/CategoryPlot.java
+    (getLegendItems): Use getLegendItems() method in each renderer.
+
 2009-11-02  David Gilbert  <david.gilbert@object-refinery.com>
 
     Bug 2876406:
